syntax = "proto3";

package dht;
option go_package = "github.com/duckth/disys-dht;dht";

service HashTable {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
}

message PutRequest {
  int64 key = 1;
  int64 value = 2;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  int64 key = 1;
}

message GetResponse {
  int64 value = 1;
}
